welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur() && getDirection() == Direction.EST){
  ^SnakeBuggle:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur() && getDirection() == Direction.OUEST){
  ^SnakeBuggle:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur()){x = true}
  ^SnakeBuggle:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(x)
  ^